--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,10 +1,7 @@
 @charset "UTF-8";
 /* Variables */
 body {
-  --font-text-theme:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Inter,Ubuntu,sans-serif;
   --font-editor-theme:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Inter,Ubuntu,sans-serif;
-  --font-monospace-theme:Menlo,SFMono-Regular,Consolas,"Roboto Mono",monospace;
-  --font-interface-theme:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Inter,Ubuntu,sans-serif;
   --font-editor:var(--font-editor-override), var(--font-text-override), var(--font-editor-theme); }
 
 body {
@@ -71,8 +68,8 @@ body {
   --image-muted:0.7;
   --image-radius: 0;
   /* Spacing */
-  --heading-spacing: 2.25rem;
-  --p-spacing: 1.5em;
+  --heading-spacing: 2em;
+  --p-spacing: 1.75rem;
   --border-width: 1px;
   --table-border-width: var(--border-width);
   /* Readable line length off */
@@ -631,7 +628,8 @@ body {
   border-width: 2px; }
 
 .mod-cm6 .cm-editor .cm-line {
-  padding: 0; }
+  padding-left: 0;
+  padding-right: 0; }
 
 .cm-editor .cm-content {
   padding-top: 0.5em; }
@@ -645,6 +643,9 @@ body {
 .markdown-source-view.mod-cm6 .cm-scroller {
   padding-left: 0;
   padding-right: 0; }
+
+.cm-s-obsidian .cm-line.HyperMD-header {
+  padding-top: calc(var(--p-spacing) / 2); }
 
 .markdown-rendered .mod-header + div > * {
   margin-block-start: 0; }
