--- a/src/css/style-settings.css
+++ b/src/css/style-settings.css
@@ -1731,13 +1731,13 @@ settings:
 		title: Paragraph spacing
 		description: Space between paragraphs in reading mode (Obsidian 1.3.7+)
 		type: variable-text
-		default: 1.5em
+		default: 1.75rem
 	-
 		id: heading-spacing
 		title: Heading spacing
 		description: Space between paragraphs and headings in reading mode (Obsidian 1.3.7+)
 		type: variable-text
-		default: 2.25rem
+		default: 2em
 	-
 		id: titles
 		title: Titles
