--- a/src/scss/variables/root.scss
+++ b/src/scss/variables/root.scss
@@ -1,9 +1,5 @@
 body {
-	--font-text-theme:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Inter,Ubuntu,sans-serif;
 	--font-editor-theme:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Inter,Ubuntu,sans-serif;
-	--font-monospace-theme:Menlo,SFMono-Regular,Consolas,"Roboto Mono",monospace;
-	--font-interface-theme:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Inter,Ubuntu,sans-serif;
-
 	--font-editor:var(--font-editor-override), var(--font-text-override), var(--font-editor-theme);
 }
 
@@ -88,8 +84,8 @@ body {
 	--image-radius: 0;
 
 	/* Spacing */
-	--heading-spacing: 2.25rem;
-	--p-spacing: 1.5em;
+	--heading-spacing: 2em;
+	--p-spacing: 1.75rem;
 
 	--border-width: 1px;
 	--table-border-width: var(--border-width);
